# qorrection

./: .cspell.config.yml  .cspell.json  .editorconfig  .gitattributes  .gitignore  .markdownlint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  SECURITY.md  deny.toml
.claude/skills/issue-authoring/: SKILL.md
.claude/skills/issue-authoring/references/: contract.md  draft-patterns.md  workflow-boundary.md
.cspell/: project-terms.txt
.github/: CODE_OF_CONDUCT.ja.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.zh.md  CONTRIBUTING.ja.md  CONTRIBUTING.md  CONTRIBUTING.zh.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  roadmap_task.yml
.github/idd/: config.json
.github/instructions/: idd-discover.instructions.md  idd-overview-appendix.instructions.md  idd-overview.instructions.md  idd-pre-merge.instructions.md  idd-roadmap-audit.instructions.md  idd-work.instructions.md
.github/scripts/: extract-msrv.py
.github/workflows/: ci.yml  lint.yml  release.yml  stale.yml
docs/: ai-strategy.md  anim-large-art-contract.md  customization.md  dependency-policy.md  idd-helper-scripts.md  idd-workflow.md  permissions.md  policy-constants.md  testing.md  trigger-policy.md
docs/demo/: qorrection-demo.tape
docs/onboarding/: agent-entry-and-verification.md  placeholders.md
src/: error.rs  lib.rs  main.rs
src/anim/: car.rs  fallback.rs  frame.rs  mod.rs  render.rs  scene.rs  terminal.rs
src/anim/assets/: big.txt  oversized.txt  std.txt  tiny.txt
src/anim/snapshots/: qorrection__anim__render__tests__bang_80.snap  qorrection__anim__render__tests__fallback_bang_39.snap  qorrection__anim__render__tests__fallback_q_39.snap  qorrection__anim__render__tests__fallback_wq_39.snap  qorrection__anim__render__tests__q_80.snap  qorrection__anim__render__tests__tiny_bang_40.snap  qorrection__anim__render__tests__tiny_q_40.snap  qorrection__anim__render__tests__wq_120.snap  qorrection__anim__render__tests__wq_oversized_160.snap
src/cli/: arming.rs  mod.rs
src/pty/: exit.rs  forward.rs  mod.rs  pump.rs  session.rs  size.rs  spawn.rs  winsize.rs
src/signals/: mod.rs
src/term/: detect.rs  guard.rs  mod.rs  width.rs
src/trigger/: altscreen.rs  input.rs  mod.rs  output.rs  parser.rs  paste.rs
src/usage/: layout.rs  mod.rs  screen.rs
tests/: arming_property.rs  cli.rs  nontty_passthrough.rs  paste_altscreen_boundary.rs  pty_e2e.rs  pty_smoke.rs  tracing_env.rs  trigger_grammar.rs  usage_layout.rs  windows_smoke.rs
tests/snapshots/: usage_layout__usage_boundary_119.snap  usage_layout__usage_boundary_120.snap  usage_layout__usage_boundary_39.snap  usage_layout__usage_boundary_39.snap.new  usage_layout__usage_boundary_79.snap  usage_layout__usage_large_140.snap  usage_layout__usage_large_140.snap.new  usage_layout__usage_medium_100.snap  usage_layout__usage_medium_100.snap.new  usage_layout__usage_small_60.snap  usage_layout__usage_small_60.snap.new  usage_layout__usage_tiny_30.snap  usage_layout__usage_tiny_30.snap.new
tests/support/: mod.rs
