[package]
name = "qorrection"
version = "0.0.0"
edition = "2021"
rust-version = "1.78"
authors = ["Kuroné Kito (黒音キト) <krone@kit.black>"]
description = "PTY wrapper that intercepts Vim-style quit commands typed into other CLI tools and responds with playful animations."
readme = "README.md"
repository = "https://github.com/kurone-kito/qorrection"
homepage = "https://github.com/kurone-kito/qorrection"
license = "MIT OR Apache-2.0"
keywords = ["pty", "cli", "tui", "joke", "vim"]
categories = ["command-line-utilities"]
include = [
  "src/**/*",
  "Cargo.toml",
  "Cargo.lock",
  "README.md",
  "LICENSE-MIT",
  "LICENSE-APACHE",
]

[[bin]]
name = "qorrection"
path = "src/bin/qorrection.rs"

# `q9` alias shares the same library entry point so behavior is
# identical regardless of `argv[0]`.
[[bin]]
name = "q9"
path = "src/bin/q9.rs"

[dependencies]
thiserror = "1"
crossterm = "0.28"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# Pin assert_cmd to the last 2.x compatible with our declared MSRV
# (rust-version = "1.78"). The 2.2.x line bumped to edition 2024
# and rust-version 1.85, which would fail the `cargo +MSRV check
# --locked` step in CI. Bump this in lockstep with any future MSRV
# bump (its own atomic commit per repo policy).
assert_cmd = "=2.0.17"
predicates = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
